test: testando update de projectService